--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <form action="https://formspree.io/jding@parkland.edu" method="POST">
+        <!--<form action="https://formspree.io/jding@parkland.edu" method="POST">
             <input type="text" name="name">
             <input type="email" name="_replyto">
             <input type="submit" value="Send">
@@ -28,9 +28,9 @@
         
         <address>
             Email us at <a href="mailto:jding@parkland.edu" onclick="SendSimpleMessage()">jding@parkland.edu</a>.<br>      
-        </address>
+        </address>-->
 
-
+<h1>Hello World.</h1>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
@@ -38,7 +38,7 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!--<script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
@@ -60,6 +60,6 @@
                 return webResource.type(MediaType.APPLICATION_FORM_URLENCODED).
                     post(ClientResponse.class, formData);
             }
-        </script>
+        </script>-->
     </body>
 </html>
