--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </form>
         
         <address>
-            Email us at <a href="mailto:jding@parkland.edu" onclick="SendSimpleMessage()">jding@parkland.edu</a>.<br>      
+            Email us at <a onclick="SendSimpleMessage()">jding@parkland.edu</a>.<br>      
         </address>
 
 
