--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <input type="submit" value="Send">
         </form>
         
-        <address>
-            Email us at <a href="mailto:jding@parkland.edu" onclick="SendSimpleMessage()">jding@parkland.edu</a>.<br>      
-        </address>
+        <p>
+            Email us at <a href = 'mailto:jding@parkland.edu?body="Yourbody"&subject="a subject".com'>jding@parkland.edu</a>.<br>      
+        </p>
 
 
 
