--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </form>
         
         <h1>
-            Email us at <a href = 'mailto:jding@parkland?body="Yourbody"&subject="a subject".edu'>jding@parkland.edu</a>.<br>      
+            Email us at <a href = 'mailto:imbeckysue@yahoo?body="Yourbody"&subject="a subject".com'>imbeckysue@yahoo.com</a>.<br>      
         </h1>
 
 
