--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </form>
         
         <h1>
-            Email us at <a href = 'mailto:imbeckysue@yahoo?body="Yourbody"&subject="a subject".com'>imbeckysue@yahoo.com</a>.<br>      
+            Email us at <a href="mailto:imbeckysue@yahoo.com?Subject=Hello%20again" target="_top">imbeckysue@yahoo.com</a>.<br>      
         </h1>
 
 
