--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </form>
         
         <p>
-            Email us at <a href="mailto:imbeckysue@yahoo.com?Subject=Hello%20again" target="_top">imbeckysue@yahoo.com</a>.<br>      
+            Email us at <a href="mailto:jding@parkland.edu?Subject=Hello%20again" target="_top">jding@parkland.edu</a>.<br>      
         </p>
 
 
