--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </form>
         
         <p>
-            Email us at <a href="mailto:jding@parkland.edu?subject:'I%20need%20a%20donut!'" target="_top">jding@parkland.edu</a>.<br>      
+            Email us at <a href="mailto:jding@parkland.edu?subject='I%20need%20a%20donut!'" target="_top">jding@parkland.edu</a>.<br>      
         </p>
 
 
