--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>
             Email us at <a href="mailto:jding@parkland.edu?subject='I%20need%20a%20donut!'" target="_top">jding@parkland.edu</a>.<br>      
         </p>
-
+<!--make another change-->
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
