--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+<h1>Hello World!</h1>
         <!-- Add your site or application content here -->
         <form action="https://formspree.io/jding@parkland.edu" method="POST">
             <input type="text" name="name">
