--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 <h1>Hello World!</h1>
         <!-- Add your site or application content here -->
         <form action="https://formspree.io/jding@parkland.edu" method="POST">
-            <input type="text" name="name">
-            <input type="email" name="_replyto">
+            <input type="text" default="name" name="name">
+            <input type="email" default="email" name="_replyto">
             <input type="submit" value="Send">
         </form>
+     
         
         <p>
             Email us at <a href="mailto:jding@parkland.edu?subject=I%20need%20a%20donut!">jding@parkland.edu</a>.<br>      
