--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Links to excellent details</h1>
 	<p>I've linked several examples here because of some particular aspect which is appealing or unique.  This does not imply any of these projects is perfect, but I want you to see some great examples of specific details.  As always, contact me if you have questions.</p>
-	
+	<!-- from online section -->
 	<a href="assets/letter_deviation.docx">excellent letter describing a deviation from the request</a>
 	<a href="assets/proposal_focus.docx">excellent proposal keeping the focus on the client</a>
 	<a href="assets/single-page_form.pdf">excellent single-page scrolling design and an excellent form</a>
@@ -19,6 +19,11 @@
 	<a href="assets/image-focus.pdf">excellent focus on specific image details.  I didn't pay much attention to the details on the image used in this homepage until I saw this site.  Focus the user's attention - good UX practice.</a>
 	<a href="assets/navbar-as-art_color-details.pdf">excellent use of the navbar as art and color-coordination attention to detail throughout the site.  Did you notice the current navbar item color on each page?</a>
 	<a href="assets/background_reviews_forms_.pdf">excellent use of background image and color, value-added reviews page, and forms that don't look like forms</a>
+	<!-- adding from on-campus section -->
+	<a href="assets/blocks_art_breakup.pdf">excellent use of blocks to provide organization and spacing, famous artwork to add humor, and break-up of menu and about content</a>
+	<a href="assets/almost-single-page.pdf">excellent use of an almost-one-page design.  It has nearly everything on one page but if the user wants to know more about the business, another page is available.</a>
+	<a href="assets/image-detail.pdf">excellent use of image detail to keep the focus</a>
+
 
 
 </body>
