adding speakers folder

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<ul id="classes">
 				<li><a href="CIS152/index.html">CIS 152</a></li>
 				<li><a href="CSC175/index.html">CSC 175</a></li>
+				<li><a href="speakers/index.html">CSC 175</a></li>
 			</ul>
 			
 		</div>
