--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div class="col-md-12">
 			
 			<ul id="classes">
-				<li><a href="CIS152/index.html">CIS 152</a></li>
-				<li><a href="CSC175/index.html">CSC 175</a></li>
-				<li><a href="speakers/index.html">CSC 175</a></li>
+				<li><a href="CIS152/index.html">CIS 152-design</a></li>
+				<li><a href="CSC175/index.html">CSC 175-Star Wars</a></li>
+				<li><a href="speakers/index.html">CSC 175-speakers</a></li>
 			</ul>
 			
 		</div>
